# anolis-provider-sim

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  mypy.ini  pyproject.toml  requirements-lock.txt  requirements.txt  vcpkg-configuration.json  vcpkg.json  version-locations.txt
.ci/: dependency-pins.yml
.github/workflows/: ci.yml  content.yml  release.yml
cmake/: Warnings.cmake
config/: demo-chamber-physics.yaml  demo-chamber.yaml  demo-reactor-physics.yaml  demo-reactor.yaml  minimal.yaml  multi-provider-extrusion.yaml  multi-tempctl.yaml  physics-flux-integration.yaml  physics-tempctl.yaml  provider-chamber.yaml  provider-extruder.yaml  provider-sim.yaml  test-deprecated.yaml  test-flux-integration.yaml  test-invalid-range.yaml  test-physics.yaml  test-rule-trigger-physics.yaml  test-rule-trigger.yaml  test_invalid.yaml
docs/: CONFIGURATION.md  Doxyfile  MULTI-PROVIDER.md  SETUP-LINUX.md  SETUP-WIN.md  TODO.md  architecture-signal-registry.md  configuration.md  demo-chamber.md  demo-reactor.md  dependencies.md  device_analogsensor0.md  device_motorctl0.md  device_relayio0.md  index.md  multi-provider.md  overview.md  setup-linux.md  setup-win.md
docs/demos/: demo-chamber.md  demo-reactor.md
docs/devices/: device_motorctl0.md  device_tempctl0.md
examples/: README.md
examples/inert_mode/: README.md  provider.yaml  test_inert.py
examples/non_interacting_mode/: README.md  provider.yaml  test_non_interacting.py
examples/sim_mode/: README.md  physics.yaml  provider.yaml  test_sim.py
scripts/: README.md  build.ps1  build.sh  format_cpp.ps1  format_cpp.sh  generate-proto-python.sh  generate_proto_python.ps1  generate_proto_python.sh  generate_python_proto.ps1  generate_python_proto.sh  run_local.ps1  run_local.sh  test.ps1  test.sh  test_adpp_integration.py  test_fault_injection.py  test_hello.py  test_multi_instance.py  test_phase2.py
src/: config.cpp  config.hpp  config_translator.cpp  config_translator.hpp  fault_injection.cpp  fault_injection.hpp  flux_client.cpp  flux_client.hpp  handlers.cpp  handlers.hpp  health.hpp  main.cpp  simulation_engine.hpp
src/adapters/: fluxgraph_adapter.cpp  fluxgraph_adapter.hpp  fluxgraph_client.cpp  fluxgraph_client.hpp  protocol_adapter.hpp
src/chaos/: README.md  chaos_control_device.cpp  chaos_control_device.hpp  fault_injection.cpp  fault_injection.hpp
src/core/: README.md  handlers.cpp  handlers.hpp  health.cpp  health.hpp  main.cpp  runtime_state.cpp  runtime_state.hpp  startup_report.hpp
src/core/transport/: framed_stdio.cpp  framed_stdio.hpp
src/devices/: README.md  analogsensor_device.cpp  analogsensor_device.hpp  device_common.hpp  device_factory.cpp  device_manager.cpp  device_manager.hpp  motorctl_device.cpp  motorctl_device.hpp  relayio_device.cpp  relayio_device.hpp  rule_engine.cpp  rule_engine.hpp  signal_registry.cpp  sim_control_device.cpp  sim_control_device.hpp  tempctl_device.cpp  tempctl_device.hpp
src/devices/analogsensor/: analogsensor_device.cpp  analogsensor_device.hpp
src/devices/common/: device_common.hpp  device_factory.cpp  device_factory.hpp  device_manager.cpp  device_manager.hpp  signal_registry.cpp  signal_registry.hpp  signal_source.hpp
src/devices/motorctl/: motorctl_device.cpp  motorctl_device.hpp
src/devices/relayio/: relayio_device.cpp  relayio_device.hpp
src/devices/tempctl/: tempctl_device.cpp  tempctl_device.hpp
src/engines/: local_engine.cpp  local_engine.hpp  null_engine.cpp  null_engine.hpp  remote_engine.hpp
src/logging/: logger.cpp  logger.hpp
src/physics/: model_interface.hpp  model_registry.cpp  model_registry.hpp  sim_physics.cpp  sim_physics.hpp  thermal_mass_model.cpp  thermal_mass_model.hpp
src/simulation/: README.md  simulation_engine.hpp
src/simulation/adapters/: protocol_adapter.hpp
src/simulation/adapters/fluxgraph/: fluxgraph_adapter.cpp  fluxgraph_adapter.hpp  fluxgraph_client.cpp  fluxgraph_client.hpp
src/simulation/engines/: local_engine.cpp  local_engine.hpp  null_engine.hpp  remote_engine.cpp  remote_engine.hpp
src/transport/: framed_stdio.cpp  framed_stdio.hpp
tests/: README.md  test_adpp_integration.py  test_config_startup.py  test_demos.py  test_fault_injection.py  test_fluxgraph_integration.py  test_hello.py  test_multi_instance.py  test_multi_provider_scenario.py  test_physics_mode.py  test_rule_trigger.py
tests/support/: __init__.py  assertions.py  env.py  framed_client.py  process.py  proto_bootstrap.py
tests/unit/: CMakeLists.txt  config_parser_test.cpp  logger_test.cpp
